15 homework 4 sprint is done

--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -19,7 +19,8 @@ INCLUDE_TESTING_MODULE=true
 
 #JWT
 JWT_SECRET=change_me_super_secret
-JWT_EXPIRES_IN=1h
+JWT_ACCESS_EXPIRES_IN=10s
+JWT_REFRESH_EXPIRES_IN=20s
 
 #Mailer (SMTP)
 MAIL_HOST=smtp.mail.ru
