--- a/src/env/.env.testing
+++ b/src/env/.env.testing
@@ -3,6 +3,7 @@
 # App
 PORT=3001
 GLOBAL_PREFIX=api
+NODE_ENV=testing
 
 # Database
 MONGODB_URI=mongodb://127.0.0.1:27017/blog-platform-test-db
@@ -21,6 +22,7 @@ INCLUDE_TESTING_MODULE=true
 
 # JWT
 JWT_SECRET=test_jwt_secret_key
+JWT_REFRESH_SECRET=test-refresh-secret-key
 JWT_ACCESS_EXPIRES_IN=10s
 JWT_REFRESH_EXPIRES_IN=20s
 
